--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
+        "bootstrap-vue": "^2.0.0-rc.11",
         "chartist": "^0.11.0",
         "es6-promise": "^4.2.4",
         "npm": "^6.3.0",
