fixes added checkboxes to "My campaigns" and functional of multiply-checking

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=912a0140ea62a2a96fb4",
-    "/custom/js/vue.js": "/custom/js/vue.js?id=450af4c0d1723cd45e98",
-    "/custom/css/app.css": "/custom/css/app.css?id=0c06574ccdaf5e09fe12",
-    "/css/app.css": "/css/app.css?id=db63217bbc6982608c3c"
+    "/js/app.js": "/js/app.js",
+    "/custom/js/vue.js": "/custom/js/vue.js",
+    "/custom/css/app.css": "/custom/css/app.css",
+    "/css/app.css": "/css/app.css"
 }
