--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=60694f838f181faa407c",
-    "/custom/js/vue.js": "/custom/js/vue.js?id=450af4c0d1723cd45e98",
-    "/custom/css/app.css": "/custom/css/app.css?id=0c06574ccdaf5e09fe12",
-    "/css/app.css": "/css/app.css?id=82b551ec6a0e5d962976"
+    "/js/app.js": "/js/app.js",
+    "/custom/js/vue.js": "/custom/js/vue.js",
+    "/custom/css/app.css": "/custom/css/app.css",
+    "/css/app.css": "/css/app.css"
 }
