--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/custom/js/vue.js": "/custom/js/vue.js",
-    "/custom/css/app.css": "/custom/css/app.css",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=d0d4c56cd2edd61635a8",
+    "/custom/js/vue.js": "/custom/js/vue.js?id=450af4c0d1723cd45e98",
+    "/custom/css/app.css": "/custom/css/app.css?id=389e9a0c3f57b4cdea61",
+    "/css/app.css": "/css/app.css?id=6a9d7eab9edc7754d273"
 }
