--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=5b9269633460b2b49b46",
-    "/custom/js/vue.js": "/custom/js/vue.js?id=a8388e0d768fd7de52a9",
-    "/custom/css/app.css": "/custom/css/app.css?id=75c42da74f0f891ba567",
-    "/css/app.css": "/css/app.css?id=a103f1c92dcc1541ea85"
+    "/js/app.js": "/js/app.js",
+    "/custom/js/vue.js": "/custom/js/vue.js",
+    "/custom/css/app.css": "/custom/css/app.css",
+    "/css/app.css": "/css/app.css"
 }
