--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
     "autoload": {
         "classmap": [
             "database/seeds",
-            "database/factories",
-            "app/Models/User.php"
+            "database/factories"
         ],
         "psr-4": {
             "App\\": "app/"
