--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-/node_modules
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
-/.idea
-/.vscode
-/.vagrant
-/public/js
-/public/css
+node_modules
+public/hot
+public/storage
+storage/*.key
+vendor
+.idea
+.vscode
+.vagrant
+public/js
+public/css
 Homestead.json
 Homestead.yaml
 npm-debug.log
